syntax = "proto3";

package proto;
option go_package = ".;protodemo";

service DemoService {
  rpc GetData(DemoReq) returns (DemoRsp){}
}

message DemoReq {
  string id = 1; // 请求参数
}

message DemoRsp{
  string result = 1; // 返回参数值
}
